Update Brightness Controller 1.2
- Fix memory bug

--- a/Brightness Controller/Brightness Controller.csproj
+++ b/Brightness Controller/Brightness Controller.csproj
@@ -52,7 +52,7 @@
     <ApplicationIcon>Icon.ico</ApplicationIcon>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject />
+    <StartupObject>BrightnessControl.Program</StartupObject>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
